Update: Volume mount

--- a/.github/workflows/dast.yaml
+++ b/.github/workflows/dast.yaml
@@ -24,6 +24,7 @@ jobs:
       - name: Run OWASP ZAP Baseline Scan
         run: |
             docker run --network="host" \
+            - u root \
             -v ${{ github.workspace }}:/zap/wrk/:rw \
             ghcr.io/zaproxy/zaproxy:stable \
             zap-baseline.py \
